blue/httproute-blue.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-blue
  namespace: tenant-blue
spec:
  parentRefs: 
  - name: gateway-blue
    namespace: tenant-blue
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /details
    backendRefs:
    - name: details
      port: 9080
  - matches:
    - path:
        type: PathPrefix
        value: /echo
      method: GET
    backendRefs:
    - name: echo
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /
      method: GET
    backendRefs:
    - name: productpage
      port: 9080
